--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,23 @@
 
   <body>
 
-    {% include header.html %}
+    <div class="wrapper">
 
-    <div class="page-content">
-      <div class="wrapper">
+      <div class="page-content">
+
+        {% include header.html %}
+
+        <main>
+
         {{ content }}
-      </div>
-    </div>
 
-    {% include footer.html %}
+        </main>
+        
+        {% include footer.html %}
+
+      </div>
+
+    </div>
 
   </body>
 
