--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
 	<div class="social-nav">
 		<ul class="nav-menu">
 			<li><a href="#">Join our Mailing List</a></li>
-			<li class="social"><a href="#"><i class="fa fa-facebook"></i></a></li>
-			<li class="social"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+			<li class="social"><a href="{{site.facebook}}" target="_blank"><i class="fa fa-facebook"></i></a></li>
+			<li class="social"><a href="{{site.linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 		</ul>
 	</div>
 
