--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,7 +9,6 @@
     position: relative;
 
     padding-bottom: 25px;
-    @extend %enshadow;
 }
 
 .pink {
@@ -121,7 +120,8 @@
                 font-size: 16px;
                 color: white;
                 display: inline-block;
-
+                margin-left: 3px;
+                margin-right: 3px;
             }
 
             &.social {
@@ -150,8 +150,8 @@
  * Site footer
  */
 .site-footer {
-    @extend %enshadow;
     padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .footer-heading {
@@ -221,6 +221,7 @@
  */
 .page-content {
     background: white;
+    @extend %enshadow;
 }
 
 .page-heading {
@@ -307,7 +308,6 @@ hr.plaid {
 }
 
 .home {
-    @extend %enshadow;
     padding: 55px $spacing-unit;
     
     h3, p, h2 {
@@ -324,6 +324,10 @@ hr.plaid {
         font-size: 30px;
     }
 
+    &.pink h3 {
+        color: white;
+    }
+
     p {
         font-size: 22px;
         color: #000000;
@@ -333,7 +337,35 @@ hr.plaid {
 
 .footer-wrapper {
     padding-left: $spacing-unit;
-    padding-right: $spacing-unit
+    padding-right: $spacing-unit;
 
     color: white;
+    @extend %clearfix;
+
+    padding-top: 20px;
+
+    .social-nav {
+        padding: 0px;
+    }
+
+    .follow {
+        position: relative;
+        top: -5px;
+        font-weight: 500;
+    }
+}
+
+.footer-left {
+    width: 50%;
+    float: left;
+}
+
+.footer-right {
+    width: 50%;
+    float: right;
+    text-align: right;
+
+    p {
+        margin-top: 35px;
+    }
 }
