--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,7 +23,9 @@ body {
     -webkit-text-size-adjust: 100%;
 
     background-image: url('../img/background.jpg');
-    background-position: center center;
+    background-position: center top;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 
