Added responsive fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,13 @@
     <hr class="plaid">
 
     <div class="footer-wrapper">
+      
+      <div class="social-nav mobile">
+        <ul class="nav-menu">
+          <li class="social"><a href="{{site.facebook}}" target="_blank"><i class="fa fa-facebook"></i></a></li>
+          <li class="social"><a href="{{site.linkedin}}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        </ul>
+      </div>
 
       <div class="footer-left">
 
@@ -16,7 +23,7 @@
 
       <div class="footer-right">
         
-        <div class="social-nav">
+        <div class="social-nav desktop">
           <ul class="nav-menu">
             <li><a class="follow" href="javascript:void(0);">Follow Us!</a></li>
             <li class="social"><a href="{{site.facebook}}" target="_blank"><i class="fa fa-facebook"></i></a></li>
