Added popup for subscribe

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -3,6 +3,11 @@
 <form action="//mangladesh.us10.list-manage.com/subscribe/post?u=0409baef71660e6dedb0e346b&amp;id=886676b7fe" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
   	<h3>Join our email list to get the latest news<br>and to hear about our anticipated 2016 launch!</h3>
+	
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response modal" onclick="this.style.display='none';" id="mce-success-response" style="display:none"></div>
+	</div>
 
 <div class="form-left">
 
@@ -21,7 +26,7 @@
 	</div>
 	<div class="mc-field-group">
 		<select name="MMERGE7" class="" id="mce-MMERGE7">
-		<option value="None">Select what closely describes you</option>
+		<option value="">Select what closely describes you</option>
 		<option value="Customer">Customer</option>
 		<option value="Retailer">Retailer</option>
 		<option value="eCommerce Retailer">eCommerce Retailer</option>
@@ -74,11 +79,8 @@
 	<div class="clear buttonwrapper"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 
 </div>
-
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+	<div class="clear clearfix"></div>
+	    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_0409baef71660e6dedb0e346b_886676b7fe" tabindex="-1" value=""></div>
     
     </div>
