--- a/_sass/_form.scss
+++ b/_sass/_form.scss
@@ -1,3 +1,56 @@
+div.mce_inline_error {
+	display: none !important;
+}
+
+.mce_inline_error {
+	border-color: $brand-inverse !important;
+	border-style: solid;
+}
+
+.modal {
+	text-indent: -5000px;
+	height:1px;
+
+	&:before {
+	  position: fixed;
+	  content: "";
+	  width: 100%;
+	  height: 100%;
+	  display: block;
+	  left: 0;
+	  top: 0;
+	  background: rgba(0,0,0,.5);
+	  z-index: 1;
+	}
+	&:after {
+		content: url('../img/subscribe.jpg');
+		text-indent: 0;
+		padding: 11px;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		width: 498px;
+		margin-left: -260px;
+		height: 305px;
+		margin-top: -163px;
+		background-color: white;
+		
+		max-width: 100%;
+
+		text-align: center;
+		z-index: 5;
+	}
+	
+
+}
+
+#mce-error-response {
+	color: white;
+	text-align: center;
+	padding: 0px 0px 9px;
+	font-weight: bold;
+}
+
 .mc-field-group {
 	
 	box-sizing: border-box;
