--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -323,7 +323,7 @@ hr.plaid {
         }
     }
 
-    .social-nav {
+    .social-nav.mobile {
         text-align: center;
         padding-bottom: 20px;
     }
