Mobile haley fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,9 +32,11 @@
         </div>
 
         <p>
-          {{site.email}} | {{site.phone}}<br>
-          {{site.address}}
+          {{site.email}}<span class="desktop"> | </span><span class="mobile"></span>{{site.phone}}<br>
+        </p>
 
+        <p>
+        {{site.address}}
         </p>
 
       </div>
