--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,11 +32,8 @@
         </div>
 
         <p>
-          {{site.email}}<span class="desktop"> | </span><span class="mobile"></span>{{site.phone}}<br>
-        </p>
-
-        <p>
-        {{site.address}}
+          {{site.email}}<span class="desktop-inline"> | </span><span class="mobile"></span>{{site.phone}}<br>
+          {{site.address}}
         </p>
 
       </div>
